--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simpletoggle",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +16,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github.com/mumfyness/simpletoggle.git"
   },
   "eslintConfig": {
     "extends": [
